# kalshi-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/prompts/: README.md
.github/workflows/: ci.yml  release.yml
cmake/: kalshiConfig.cmake.in
docs/: README.md  godot-integration.md  research.md
examples/: CMakeLists.txt  Makefile  README.md  basic_usage.cpp  get_daily_high_temp.cpp  get_daily_temp.cpp  get_markets.cpp  live_market_view.hpp
include/: Makefile  README.md
include/kalshi/: api.hpp  error.hpp  http_client.hpp  kalshi.hpp  pagination.hpp  rate_limit.hpp  retry.hpp  signer.hpp  version.hpp.in  websocket.hpp
include/kalshi/detail/: ws_json.hpp
include/kalshi/models/: market.hpp  order.hpp
src/: CMakeLists.txt  Makefile  README.md
src/api/: client.cpp  json_bodies.hpp  query_builders.hpp  response_parsers.hpp
src/auth/: signer.cpp
src/core/: error.cpp  rate_limit.cpp  retry.cpp
src/http/: client.cpp
src/models/: market.cpp  order.cpp
src/ws/: subscription_registry.hpp  websocket.cpp  ws_cmd_bodies.hpp  ws_ssl_flags.hpp
tests/: CMakeLists.txt  Makefile  README.md  parse_benchmark.cpp  test_api.cpp  test_features.cpp  test_json_serialize.cpp  test_main.cpp  test_models.cpp  test_query_builders.cpp  test_response_parsers.cpp  test_signer.cpp  test_version.cpp  test_ws_lifecycle.cpp  test_ws_parser.cpp  test_ws_subscription_registry.cpp  test_ws_tls.cpp
tools/: README.md  bench.sh  cpp_auto_allowlist.txt
